--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@
             
             flashDice();
             updateDiceUI(index);
-            showMessage(`Upgraded!`, "#ffeb3b");
+            showMessage(`Upgrade!`, "#ffeb3b");
             checkBossUnlock();
         }
 
@@ -1495,4 +1495,5 @@
     </script>
 </body>
 </html>
+
 
